--- a/style.css
+++ b/style.css
@@ -52,3 +52,27 @@ main.bookshelf{
     font-size: 1.5em;
     text-align: center;
 }
+.footer{
+    display: flex;
+    justify-content: space-around;
+}
+.readStatus{
+    font-size: 1.2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    height: 80%;
+    width: 60%;
+    border-radius: 15px;
+}
+.pages{
+    align-self: center;
+    margin: 5px 15px;
+}
+.unread{
+    background-color: red;
+}
+.read{
+    background-color: rgb(23, 184, 23);
+}
