--- a/style.css
+++ b/style.css
@@ -4,11 +4,14 @@
     
 }
 
-body{
+.content{
     min-height: 100vh;
-    background-color: gray;
+    background-color: mediumaquamarine;
 }
 
+.darken{
+    filter: brightness(60%);
+}
 .header {
     display: flex;
     justify-content: space-between;
@@ -79,10 +82,16 @@ main.bookshelf{
 }
 
 .formContainer{
-    width: 80vw;
-    margin: auto;
+    width: 40vw;
+    background-color: red;
+    box-shadow: 0 0 8px black;
+    position: fixed;
+    left: 30vw;
+    top: -40vh;
+    transition: 0.8s;
 }
 fieldset{
+    padding: 20px 40px;
     display: grid;
     grid-template: 2fr repeat(4, 1fr) / 1fr 3fr;
     gap: 10px;
@@ -95,5 +104,10 @@ fieldset h2{
 fieldset label{
     font-size: 1.2rem;
     justify-self: center;
+}
+
+.visible{
+    top: 15vh;
+    filter: brightness(100%);
 }
 
