--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ main.bookshelf{
     gap: 40px;
 }
 .book{
+    max-width: 360px;
     height: 300px;
     background-color: lightblue;
     box-shadow: -2px 2px 4px black;
@@ -82,13 +83,14 @@ main.bookshelf{
 }
 
 .formContainer{
-    width: 40vw;
+    width: 400px;
     background-color: red;
     box-shadow: 0 0 8px black;
     position: fixed;
-    left: 30vw;
-    top: -40vh;
+    left: 50%;
+    top: -120vh;
     transition: 0.8s;
+    transform: translate(-50%, 0);
 }
 fieldset{
     padding: 20px 40px;
