--- a/style.css
+++ b/style.css
@@ -9,17 +9,16 @@
     background-color: mediumaquamarine;
 }
 
-.darken{
-    filter: brightness(60%);
-}
 .header {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    min-width: 100%;
     height: 80px;
     
     background-color: aqua;
+}
+.button {
+    
 }
 main.bookshelf{
     padding: 40px;
@@ -108,8 +107,13 @@ fieldset label{
     justify-self: center;
 }
 
+/*Add this class to make form visible on screen*/
 .visible{
     top: 15vh;
     filter: brightness(100%);
+}
+/*Add this class to darken stuff*/
+.darken{
+    filter: brightness(60%);
 }
 
